# FstvlPress

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SETUP.md  package-lock.json  setup.sh
backend/: .dockerignore  .env.example  .env.local.keycloak.example  .gitignore  pyproject.toml
backend/app/: access_control.py  case_utils.py  collection_names.py  db.py  deps.py  etag.py  font_cache.py  image_processing.py  integration_review.py  item_page_jobs.py  job_retention.py  logging_config.py  main.py  media_metadata.py  media_responsive.py  media_tags.py  media_variant_migration.py  program_catalog.py  public_cache.py  responsive_config.py  revisioning.py  section_structure.py  security.py  settings.py  sitemap.py  temp_credentials.py  template_sync.py
backend/docker/: Dockerfile
backend/dummy_data/: dump_minio.sh  dump_mongo.sh
backend/tests/: test_admin_devops_tutorials.py  test_admin_media_fallbacks.py  test_admin_template_item_page_config.py  test_collection_registry.py  test_design_versions.py  test_faq_shared_catalog.py  test_integration_connection_defaults.py  test_integration_review_change_detection.py  test_item_page_mapped_conflicts.py  test_item_page_mapping_preview.py  test_map_section_type.py  test_media_responsive.py  test_media_variant_migration.py  test_navigation_menu_design_setting.py  test_page_deleted_redirects.py  test_page_sync_from_template.py  test_program_shared_catalog.py  test_sitemap_navigation_logos.py  test_sitemap_stats.py  test_template_output_mapping.py  test_ticker_unified_items.py
docker/: .env.example  (+6 more)
(+155 files in other folders)
